--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -17,6 +17,11 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 3.1.101
+    - name: GitHub Script
+      uses: actions/github-script@0.9.0
+      with:
+        # The script to run
+        script: cd src/dedreira.samples.webapi   
     - name: Install dependencies
       run: dotnet restore
     - name: Build
