--- a/src/dedreira.samples.webapi/dedreira.samples.webapi.csproj
+++ b/src/dedreira.samples.webapi/dedreira.samples.webapi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
   </ItemGroup>
 
