integrate codecov into build

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -23,3 +23,9 @@ jobs:
       run: dotnet build  src --configuration Release --no-restore
     - name: Test
       run: dotnet test src /p:CollectCoverage=true --no-restore --verbosity normal
+    - name: Upload Report
+      env:
+        CODECOV_TOKEN: "07f03a84-da0d-4a6a-bde6-10e27073442b"
+      run: bash <(curl -s https://codecov.io/bash)
+
+  
