github action changes

--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build
       run: dotnet build  src --configuration Release --no-restore
     - name: Test
-      run: dotnet test src /p:CollectCoverage=true --no-restore --verbosity normal
+      run: dotnet test src /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --no-restore --verbosity normal
     - name: Check coverage file content
       run: cat /home/runner/work/dotnet-webapi/dotnet-webapi/src/dedreira.samples.webapi.tests/coverage.json
     - name: Upload Report
