--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Test
       run: dotnet test src /p:CollectCoverage=true /p:CoverletOutputFormat=opencover --no-restore --verbosity normal
     - name: Check coverage file content
-      run: cat /home/runner/work/dotnet-webapi/dotnet-webapi/src/dedreira.samples.webapi.tests/coverage.json
+      run: cat /home/runner/work/dotnet-webapi/dotnet-webapi/src/dedreira.samples.webapi.tests/coverage.opencover.xml
     - name: Upload Report
       env:
         CODECOV_TOKEN: "07f03a84-da0d-4a6a-bde6-10e27073442b"
