Add endpoint openId endpoint data

--- a/src/dedreira.samples.webapi/appsettings.json
+++ b/src/dedreira.samples.webapi/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtBearer":{
+    "Authority":"",
+    "Audience":"",
+    "AuthorizeEndpoint":"https://demo.identityserver.io/connect/authorize",
+    "TokenEndpoint":"https://demo.identityserver.io/connect/token"
+  }
 }
